fix: adjust top gap

--- a/src/scss/imports/modules/_dependency_list.scss
+++ b/src/scss/imports/modules/_dependency_list.scss
@@ -5,7 +5,7 @@
 .dependency-list {
     display: grid;
     grid-template-columns: repeat(4, auto);
-    grid-gap: var(--gap);
+    grid-gap: 1rem var(--gap);
     page-break-before: avoid;
 
     .layout-table & {
